refactor(flowable): 重构流程定义加载机制，优化属性面板和监控页面
### 重构
- 替换 FlowableConsts → FlowableConstants
- 合并 FlowableAutoConfiguration → FlowableConfig
- 新增 BpmnDiagramService 统一 BPMN 图操作
- 新增 ModelPageVO / ProcessDefinitionVO / ProcessInstanceVO
- 优化 ProcessMetaService 使用缓存加载 YAML 定义

### Bug 修复
- ModelController.delete(): @GetMapping → @PostMapping（前端 POST 405）
- GlobalProcessListener: 添加 event.getExecution() 空值保护
- design/index.jsx: render 参数重命名避免混淆

### 代码质量
- ProcessService: 注入字段 private final, 移除无用 main()
- FlowableConfig: @AutoConfiguration → @Configuration
- ModelController: 移除未使用导入
- PropertiesPanel: 组件卸载/更新时正确解绑 modeler 事件监听
- BpmnModelUtils.java 与 ModelTool.java 重复，已删除

### 性能与 UX
- MonitorController task(): 添加 Pageable 分页参数，list() → listPage()
- monitor/instance 列数从 26 缩减至 9 列

### 基础设施
- 新增 src/test/: ModelToolTest（单元测试）+ ProcessServiceTest（集成测试骨架）
- application.yml: 数据库密码添加环境变量覆盖注释